deployments/mysql-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-client
  namespace: food-delivery
spec:
  containers:
  - name: mysql-client
    image: mysql:8.0
    command: ["sleep", "3600"]
