deployments/06-minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: food-delivery
spec:
  selector:
    matchLabels:
      app: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        image: minio/minio
        args:
        - server
        - /data
        - --console-address
        - ":9001"
        ports:
        - containerPort: 9000
          name: minio-api
        - containerPort: 9001
          name: minio-console
        volumeMounts:
        - name: minio-persistent-storage
          mountPath: /data
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /minio/health/live
            port: 9000
          initialDelaySeconds: 120
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /minio/health/ready
            port: 9000
          initialDelaySeconds: 120
          periodSeconds: 20
      volumes:
      - name: minio-persistent-storage
        persistentVolumeClaim:
          claimName: minio-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: food-delivery
spec:
  ports:
  - port: 9000
    targetPort: 9000
    name: minio-api
  - port: 9001
    targetPort: 9001
    name: minio-console
  selector:
    app: minio
