deployments/18-kibana-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana-nodeport
  namespace: food-delivery
spec:
  type: NodePort
  ports:
  - port: 5601
    targetPort: 5601
    nodePort: 30601
  selector:
    app: kibana
