deployments/19-elasticsearch-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-nodeport
  namespace: food-delivery
spec:
  type: NodePort
  ports:
  - port: 9200
    targetPort: 9200
    nodePort: 30920
    name: http
  - port: 9300
    targetPort: 9300
    nodePort: 30930
    name: transport
  selector:
    app: elasticsearch
